fix the items alignment

--- a/src/css/invdetail.module.css
+++ b/src/css/invdetail.module.css
@@ -49,30 +49,32 @@
 
 .strip {
     /* border: 2px solid blue; */
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 3fr repeat(3, 1fr);
     border-bottom: 2px solid lightskyblue;
     height: 80px;
 }
-
-/* .stripDesc {
-    position: relative;
-    left: 0
+.stripDesc {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
 }
+
 .stripQty {
-    position: absolute;
-    left: 500px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
 .stripUnit {
-    position: relative;
-    left: 600px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
 .stripTotal {
-    border: 2px solid red;
-    position: relative;
-    left: 700px;
-} */
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
 
 .lightHeaders {
     color: hsl(195, 80%, 60%);
@@ -159,6 +161,7 @@
 .balAmts {
     text-align: right;
 }
+
 
 
 
